--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/index.css">
-    <title>Upload de Imagem</title>
+    <title>TechDoc</title>
 </head>
 
 <body>
@@ -27,18 +34,19 @@
             <div class="titulo">
                 <h1>Bem Vindo ao TechDoc</h1>
             </div>
-    
+
             <div class="descricao">
-                <h1>Tech Doc é um serviço que simplifica a análise de documentos, automatizando a extração e organização de informações. <span>Rápido, preciso e fácil de usar!</span></h1>
+                <h1>Tech Doc é um serviço que simplifica a análise de documentos, automatizando a extração e organização
+                    de informações. <span>Rápido, preciso e fácil de usar!</span></h1>
             </div>
         </div>
 
-        <h1>Upload de Imagem</h1>
         <form action="/uploadfile/" method="post" enctype="multipart/form-data"> <!-- rota corrigida -->
-            <input type="file" name="file" accept="image/*,.pdf">
-            <button type="submit">Upload</button>
+            <input type="file" name="file" accept="image/*,.pdf"><br>
+            <button type="submit">UPLOAD</button>
         </form>
     </section>
 
 </body>
+
 </html>
