adaptando para fazer o deploy (2/2)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/index.css">
-    <link rel="stylesheet" href="../static/css/responsividade-mobile.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/responsividade-mobile.css">
     <title>TechDoc</title>
 </head>
 
@@ -27,7 +27,7 @@
             </div>
                     
             <!--Logo do BB e nome da Aplicação-->
-            <img id="img1-header" src="../static/Imagens/header/Imagem15 1.png" alt="">
+            <img id="img1-header" src="Imagens/header/Imagem15 1.png" alt="">
             <h1>TechDoc</h1>
     </header>
     <hr>
@@ -59,7 +59,7 @@
         </div>
 
         <div class="img-principal">
-            <img src="../static/Imagens/pg-principal/img pg-principal.png" alt=""> <!--Imagem de fundo do site-->
+            <img src="Imagens/pg-principal/img pg-principal.png" alt=""> <!--Imagem de fundo do site-->
         </div>
     </section>
     <footer> <!--Rodape com algumas informações-->
@@ -69,20 +69,20 @@
         </div>
 
         <div class="termos-e-responsabilidades">
-            <img src="../static/Imagens/footer/img-termos e responsabilidades.png" alt="">
+            <img src="Imagens/footer/img-termos e responsabilidades.png" alt="">
             <h1>Termo de Responsabilidade</h1>
         </div>
 
         <div class="Código-de-Ética-e-Normas-de-Conduta">
-            <img src="../static/Imagens/footer/codigo de etica.png" alt="">
+            <img src="Imagens/footer/codigo de etica.png" alt="">
             <h1>Código de Ética e Normas de Conduta</h1>
             <hr class="linha-footer">
         </div>
     </footer>
 
     <!--Parte dos scripts do site-->
-    <script src="../static/Js/hamburguer.js"></script>  <!--Script do menu hamburguer-->
-    <script src="../static/Js/sendToScanner.js"></script> <!--Script para enviar para o back informações-->
+    <script src="Js/hamburguer.js"></script>  <!--Script do menu hamburguer-->
+    <script src="Js/sendToScanner.js"></script> <!--Script para enviar para o back informações-->
 </body>
 
 </html>
