--- a/frontend/result.html
+++ b/frontend/result.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/result.css"> <!--Pasta css-->
-    <link rel="stylesheet" href="../static/css/responsividade-mobile.css"> <!--Pasta de responsividade-->
+    <link rel="stylesheet" href="css/result.css"> <!--Pasta css-->
+    <link rel="stylesheet" href="css/responsividade-mobile.css"> <!--Pasta de responsividade-->
 
     <title>Resultado</title>
 </head>
@@ -15,8 +15,8 @@
     <header>
         <div class="off-screen-menu"> <!--Menu de navegação na forma hamburguer, quando é ativado-->
             <ul>
-                <li><a href="#digitalizar">Digitalizar</a></li>
-                <li><a href="#ajuda">Ajuda</a></li>
+                <li><a href="index.html">Digitalizar</a></li>
+                <li><a href="ajuda.html">Ajuda</a></li>
                 <li><a href="#termo">Termo de Responsabilidade</a></li>
                 <li><a href="#normas">Código de Ética e Normas de Conduta</a></li>
             </ul>
@@ -29,7 +29,7 @@
         </div>
 
         <!--Logo do BB e nome da Aplicação-->
-        <img id="img1-header" src="../static/Imagens/header/Imagem15 1.png" alt="">
+        <img id="img1-header" src="Imagens/header/Imagem15 1.png" alt="">
         <a href="/">
             <h1>TechDoc</h1>
         </a>
@@ -40,12 +40,12 @@
     <section class="fundo-azul">
         <!-- Cabeçalho da seção de resultados -->
         <div class="resultados-header">
-            <h1> <img src="../static/Imagens/result/li_file-search.png" alt="file-search">Resultados </h1>
+            <h1> <img src="Imagens/result/li_file-search.png" alt="file-search">Resultados </h1>
         </div>
 
         <!-- Título informativo -->
         <div class="titulo-info">
-            <img src="../static/Imagens/result/li_info@2x.png" alt="imagem informação">
+            <img src="Imagens/result/li_info@2x.png" alt="imagem informação">
             <h2>Resumo das Informações</h2>
         </div>
 
@@ -57,10 +57,10 @@
         <!-- Botões -->
         <div class="botoes">
             <a href="/" style="text-decoration: none;">
-                <button id="nova-pesquisa">Nova Pesquisa <img src="../static/Imagens/result/li_arrow-right.png" alt=""></button>
+                <button id="nova-pesquisa">Nova Pesquisa <img src="Imagens/result/li_arrow-right.png" alt=""></button>
             </a>
             <a href="/" style="text-decoration: none;">
-                <button id="sair"> <img src="../static/Imagens/result/li_x.png" alt="">Sair</button>
+                <button id="sair"> <img src="Imagens/result/li_x.png" alt="">Sair</button>
             </a>
             </div>
         </section>
@@ -72,18 +72,18 @@
         </div>
 
         <div class="termos-e-responsabilidades">
-            <img src="../static/Imagens/footer/img-termos e responsabilidades.png" alt="">
+            <img src="Imagens/footer/img-termos e responsabilidades.png" alt="">
             <h1>Termo de Responsabilidade</h1>
         </div>
 
         <div class="Código-de-Ética-e-Normas-de-Conduta">
-            <img src="../static/Imagens/footer/codigo de etica.png" alt="">
+            <img src="Imagens/footer/codigo de etica.png" alt="">
             <h1>Código de Ética e Normas de Conduta</h1>
         </div>
     </footer>
 
-    <script src="../static/Js/hamburguer.js"></script> <!--Script do menu hamburguer-->
-    <script src="../static/Js/scannerResult.js"></script> <!--Script para receber o resultado do back-->
+    <script src="Js/hamburguer.js"></script> <!--Script do menu hamburguer-->
+    <script src="Js/scannerResult.js"></script> <!--Script para receber o resultado do back-->
 </body>
 
 </html>
