--- a/frontend/ajuda.html
+++ b/frontend/ajuda.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/index.css">
-    <link rel="stylesheet" href="../static/css/ajuda.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/ajuda.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Ajuda - TechDoc</title>
 </head>
@@ -28,7 +28,7 @@
             </div>
             
             <!--Logo do BB e nome da Aplicação-->
-            <img id="img1-header" src="../static/Imagens/header/Imagem15 1.png" alt="">
+            <img id="img1-header" src="Imagens/header/Imagem15 1.png" alt="">
             <h1>TechDoc</h1>
     </header>
 
@@ -36,7 +36,7 @@
 
     <!-- Carrossel -->
     <section class="carrossel">
-        <img src="../static/Imagens/carrossel/imagem-carrossel.png" alt="Carrossel">
+        <img src="Imagens/carrossel/imagem-carrossel.png" alt="Carrossel">
         <div class="carrossel-content">
             <h2 class="carrossel-title">Precisa de<br></br>ajuda?</h2>
             <p class="carrossel-description">Aqui você encontra respostas para as<br></br>principais dúvidas sobre a nossa<br></br>ferramenta de digitalização</p>
@@ -206,19 +206,19 @@
         </div>
 
         <div class="termos-e-responsabilidades">
-            <img src="../static/Imagens/footer/img-termos e responsabilidades.png" alt="">
+            <img src="Imagens/footer/img-termos e responsabilidades.png" alt="">
             <h1>Termo de Responsabilidade</h1>
         </div>
 
         <div class="Código-de-Ética-e-Normas-de-Conduta">
-            <img src="../static/Imagens/footer/codigo de etica.png" alt="">
+            <img src="Imagens/footer/codigo de etica.png" alt="">
             <h1>Código de Ética e Normas de Conduta</h1>
             <hr class="linha-footer">
         </div>
     </footer>
 
-    <script src="../static/Js/hamburguer.js"></script>
-    <script src="../static/Js/faq.js"></script>
+    <script src="Js/hamburguer.js"></script>
+    <script src="Js/faq.js"></script>
 </body>
 
 </html>
